fixed sticky footer position on mobile, added negative margin to footer to push it down.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
-    
+
 }
 
 
@@ -103,6 +103,8 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
+    position: sticky;
+    margin-top: -3px;
 
 }
 
